# Lab6_CV

./: .gitignore  CMakeLists.txt  README.md
include/: BookTracker.h
report/: report.tex
src/: BookTracker.cpp  main.cpp  main_old.cpp
